external-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels: 
    name: external
  name: external
spec:
  containers:
  - env: 
    - name: APP_NAME
      value: External Facinf Application
    - name: BG_COLOR
      value: red
    image: kodekloud/webapp-conntest
    name: external
    ports:
    - containerPort: 8080
      protocol: TCP
