payroll-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels: 
    name: payroll
  name: payroll
spec:
  containers:
  - env: 
    - name: APP_NAME
      value: PayRoll Facing Application
    - name: BG_COLOR
      value: blue
    image: kodekloud/webapp-conntest
    name: payroll
    ports:
    - containerPort: 8080
      protocol: TCP
