external-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  selector:
    name: external
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30083
