internal-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: internal-service
spec:
  selector:
    name: internal
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30082
