payroll-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: payroll-service
spec:
  selector:
    name: payroll
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30084
